Se ha cambiado el json-server para que devuelva comentarios de los personajes

--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
-  }
+  },
+  "proxy": "http://localhost:3080"
 }
