--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
   "name": "hotel-api",
   "version": "1.0.0",
-  "description": "Hotel API",
+  "description": "Characters Comments API",
   "main": "index.js",
   "scripts": {
-    "mock-server": "json-server --routes ./config/routes.json --watch mock-data/hotels-data.json --middlewares ./config/hotel.middleware.js --no-delete-cascade"
+    "mock-server": "json-server --routes ./config/routes.json --watch mock-data/characters-comments.json --middlewares ./config/character.middleware.js --no-delete-cascade --port 3080"
   },
   "author": "Lemoncode",
   "license": "MIT",
